readme updates, and database fetching amount updated